--- a/src/main/resources/templates/thymeleaf/menu/menu.html
+++ b/src/main/resources/templates/thymeleaf/menu/menu.html
@@ -29,7 +29,7 @@
 
         <div class="layui-btn-group menu">
             <button class="layui-btn" onclick="openViewBig(ctx+'/page/menu/menuAdd','新增')">新增</button>
-            <button class="layui-btn" data-type="getCheckData">删除</button>
+            <button class="layui-btn layui-btn-danger" data-type="getCheckData">删除</button>
             <!--<button class="layui-btn" data-type="getCheckLength">获取选中数目</button>-->
             <!--<button class="layui-btn" data-type="isAll">验证是否全选</button>-->
         </div>
