--- a/src/main/resources/templates/thymeleaf/commons/browse/single.html
+++ b/src/main/resources/templates/thymeleaf/commons/browse/single.html
@@ -10,8 +10,8 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
         <h1>
-            菜单管理
-            <small>菜单列表</small>
+            单选
+            <small>点击对象的项目</small>
         </h1>
         <!--<ol class="breadcrumb">-->
         <!--<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>-->
@@ -26,7 +26,7 @@
 
         <div class="row">
             <div class="col-xs-12">
-                <table class="layui-hide" id="menu" lay-filter="menu"></table>
+                <table class="layui-hide" id="common_single" lay-filter="common_single"></table>
                 <!--<div  id="menu"></div>-->
                 <!--<table class="layui-table" lay-data="{height:'full-80',url:ctx+'/menu/json/page', page:true, id:'menu'}" lay-filter="menu">-->
                 <!--<thead>-->
@@ -51,12 +51,6 @@
 <div th:include="commons/common_js :: commonJs"></div>
 
 
-<script type="text/html" id="menuBar">
-    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="view">查看</a>
-    <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
-    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
-</script>
-
 <script type="text/javascript">
     var table
     layui.use('table', function () {
@@ -64,7 +58,7 @@
 
         //第一个实例
         table.render({
-            elem: '#menu'
+            elem: '#common_single'
             // , height: 'full-162'
             , height: 'full-80'
             , url: ctx + '/menu/json/page' //数据接口
@@ -111,54 +105,9 @@
                         }
                     }, unresize: true
                 }
-                    , {fixed: 'right', title: '操作', width: 178, templet: '#menuBar', unresize: true}
+
                 ]
             ]
-        });
-
-        table.on('tool(menu)', function (obj) {
-            var data = obj.data;
-            if (obj.event === 'view') {
-                // layer.msg('ID：'+ data.id + ' 的查看操作');
-                layer.open({
-                    type: 2,
-                    area: ['400px', '600px'],
-                    fixed: false, //不固定
-                    maxmin: true,
-                    content: ctx + '/menu/view/' + data.id
-                });
-            } else if (obj.event === 'del') {
-                layer.confirm('真的删除行么', function (index) {
-
-                    layer.close(index);
-
-                    $.ajax({
-                        type: 'delete',
-                        url: ctx + '/menu/' + data.id,
-                        contentType: 'application/json',
-                        dataType: "json",
-                        // data: JSON.stringify(arr),
-                        success: function (d) {
-                            if (d.status == "0") {
-                                layer.msg("删除成功");
-                                obj.del();
-                                table.reload("menu", {})
-                            } else {
-                                layer.msg("删除失败，请联系管理员或重试。");
-                            }
-                        }
-                    });
-
-                });
-            } else if (obj.event === 'edit') {
-                layer.open({
-                    type: 2,
-                    area: ['400px', '600px'],
-                    fixed: false, //不固定
-                    maxmin: true,
-                    content: ctx + '/menu/edit/' + data.id
-                });
-            }
         });
 
     });
