--- a/src/main/resources/templates/thymeleaf/fragment/resource.html
+++ b/src/main/resources/templates/thymeleaf/fragment/resource.html
@@ -15,8 +15,82 @@
 <body>
 
 <!--ztree插件开始-->
-<div>
+<div th:fragment="ztree">
+    <link rel="stylesheet" th:href="@{/static/plugins/ztree/css/bootstrapStyle/bootstrapStyle.css}" href="/static/plugins/ztree/css/bootstrapStyle/bootstrapStyle.css" type="text/css">
+    <script type="text/javascript" th:src="@{/static/plugins/ztree/js/jquery.ztree.core.js}" src="/static/plugins/ztree/js/jquery.ztree.core.js"></script>
+    <script type="text/javascript" th:src="@{/static/plugins/ztree/js/jquery.ztree.excheck.js}" src="/static/plugins/ztree/js/jquery.ztree.excheck.js"></script>
+    <script type="text/javascript" th:src="@{/static/plugins/ztree/js/jquery.ztree.exedit.js}" src="/static/plugins/ztree/js/jquery.ztree.exedit.js"></script>
 
+    <script type="text/javascript">
+        var setting = {
+            view: {
+                addHoverDom: addHoverDom,
+                removeHoverDom: removeHoverDom,
+                // selectedMulti: false
+            },
+            check: {
+                enable: false
+            },
+            data: {
+                simpleData: {
+                    enable: true
+                }
+            },
+            edit: {
+                enable: true
+            }
+        };
+        var zNodes = [
+            {id: 1, pId: 0, name: "[core] 基本功能 演示", open: true},
+            {id: 101, pId: 1, name: "最简单的树 --  标准 JSON 数据"},
+            {id: 102, pId: 1, name: "最简单的树 --  简单 JSON 数据"},
+            {id: 103, pId: 1, name: "不显示 连接线"},
+            {id: 104, pId: 1, name: "不显示 节点 图标"},
+            {id: 108, pId: 1, name: "异步加载 节点数据"},
+            {id: 109, pId: 1, name: "用 zTree 方法 异步加载 节点数据"},
+            {id: 110, pId: 1, name: "用 zTree 方法 更新 节点数据"},
+            {id: 111, pId: 1, name: "单击 节点 控制"},
+            {id: 112, pId: 1, name: "展开 / 折叠 父节点 控制"},
+            {id: 113, pId: 1, name: "根据 参数 查找 节点"},
+            {id: 114, pId: 1, name: "其他 鼠标 事件监听"},
+            {id: 2, pId: 0, name: "[excheck] 复/单选框功能 演示", open: false},
+            {id: 201, pId: 2, name: "Checkbox 勾选操作"},
+            {id: 206, pId: 2, name: "Checkbox nocheck 演示"},
+            {id: 211, pId: 2, name: "Radio halfCheck 演示"},
+            {id: 205, pId: 2, name: "用 zTree 方法 勾选 Radio"}
+        ];
+        $(document).ready(function () {
+            $.fn.zTree.init($("#treeDemo"), setting, zNodes);
+        });
+        var newCount = 1;
+
+        function addHoverDom(treeId, treeNode) {
+            var sObj = $("#" + treeNode.tId + "_span");
+            if (treeNode.editNameFlag || $("#addBtn_" + treeNode.tId).length > 0) return;
+            var addStr = "<span class='button add' id='addBtn_" + treeNode.tId + "' title='add node' onfocus='this.blur();'></span>";
+            sObj.after(addStr);
+            var btn = $("#addBtn_" + treeNode.tId);
+            if (btn) btn.bind("click", function () {
+                var zTree = $.fn.zTree.getZTreeObj("treeDemo");
+                 zTree.addNodes(treeNode, {id: (100 + newCount), pId: treeNode.id, name: "new node" + (newCount++)});
+                return false;
+            });
+            // var aObj = $("#" + treeNode.tId + "_a");
+            // if ($("#diyBtn_" + treeNode.id).length > 0) return;
+            // var editStr = "<span id='diyBtn_space_" + treeNode.id + "' > </span>"
+            //     + "<button type='button' class='diyBtn1' id='diyBtn_" + treeNode.id
+            //     + "' title='" + treeNode.name + "' onfocus='this.blur();'></button>";
+            // aObj.append(editStr);
+            // var btn = $("#diyBtn_" + treeNode.id);
+            // if (btn) btn.bind("click", function () {
+            //     alert("diy Button for " + treeNode.name);
+            // });
+        };
+
+        function removeHoverDom(treeId, treeNode) {
+            // $("#addBtn_" + treeNode.tId).unbind().remove();
+        };
+    </script>
 </div>
 <!--ztree插件开始-->
 
