--- a/src/main/resources/templates/thymeleaf/index/home.html
+++ b/src/main/resources/templates/thymeleaf/index/home.html
@@ -342,7 +342,7 @@
     <!-- /.content -->
 
     <!-- /.content-wrapper -->
-    <footer class="main-footer">
+    <footer class="main-footer" th:replace="fragment/footer :: footer">
         <div class="pull-right hidden-xs">
             <b>Version</b> 2.4.0
         </div>
