--- a/src/main/resources/templates/thymeleaf/test/test.html
+++ b/src/main/resources/templates/thymeleaf/test/test.html
@@ -25,7 +25,7 @@
         <!--系统基本信息-->
         <div class="row">
             <!--OS信息-->
-            <div class="col-md-6">
+            <div class="col-md-12">
                 <!-- Line chart -->
                 <div class="box box-primary">
                     <div class="box-header with-border">
@@ -34,8 +34,7 @@
                         <h3 class="box-title">系统信息</h3>
 
                         <div class="box-tools pull-right">
-                            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
-                            </button>
+                            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
                             <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
                         </div>
                     </div>
@@ -43,7 +42,7 @@
                     <!--<div id="line-chart3" style="height: 300px;"></div>-->
                     <!--</div>-->
                     <div class="">
-                        <div class="" th:replace="fragment/resource :: ztree"></div>
+                        <div class="" th:replace="fragment/resource :: ztree(treeDemo)"></div>
                         <div id="treeDemo" class="ztree">
 
                         </div>
@@ -61,7 +60,7 @@
     <!-- /.content -->
 
     <!-- /.content-wrapper -->
-    <footer class="main-footer">
+    <footer class="main-footer" th:replace="fragment/footer::footer">
         <div class="pull-right hidden-xs">
             <b>Version</b> 2.4.0
         </div>
