添加定时任务配置功能3

--- a/src/main/resources/static/css/alt/AdminLTE-without-plugins.css
+++ b/src/main/resources/static/css/alt/AdminLTE-without-plugins.css
@@ -1285,7 +1285,7 @@ a:focus {
 .form-group.has-error .help-block {
   color: #dd4b39;
 }
-/* Input group */
+/* Input jobgroup */
 .input-group .input-group-addon {
   border-radius: 0;
   border-color: #d2d6de;
