--- a/src/main/resources/templates/thymeleaf/fragment/right.html
+++ b/src/main/resources/templates/thymeleaf/fragment/right.html
@@ -273,7 +273,7 @@
                         有关此一般设置选项的一些信息
                     </p>
                 </div>
-                <!-- /.form-group -->
+                <!-- /.form-jobgroup -->
 
                 <div class="form-group">
                     <label class="control-sidebar-subheading">
@@ -285,7 +285,7 @@
                         其他选项集可用
                     </p>
                 </div>
-                <!-- /.form-group -->
+                <!-- /.form-jobgroup -->
 
                 <div class="form-group">
                     <label class="control-sidebar-subheading">
@@ -297,7 +297,7 @@
                         允许用户在博客帖子中显示自己的名字
                     </p>
                 </div>
-                <!-- /.form-group -->
+                <!-- /.form-jobgroup -->
 
                 <h3 class="control-sidebar-heading">聊天设置</h3>
 
@@ -307,7 +307,7 @@
                         <input type="checkbox" class="pull-right" checked>
                     </label>
                 </div>
-                <!-- /.form-group -->
+                <!-- /.form-jobgroup -->
 
                 <div class="form-group">
                     <label class="control-sidebar-subheading">
@@ -315,7 +315,7 @@
                         <input type="checkbox" class="pull-right">
                     </label>
                 </div>
-                <!-- /.form-group -->
+                <!-- /.form-jobgroup -->
 
                 <div class="form-group">
                     <label class="control-sidebar-subheading">
@@ -323,7 +323,7 @@
                         <a href="javascript:void(0)" class="text-red pull-right"><i class="fa fa-trash-o"></i></a>
                     </label>
                 </div>
-                <!-- /.form-group -->
+                <!-- /.form-jobgroup -->
             </form>
         </div>
         <!-- /.tab-pane -->
