--- a/src/main/resources/templates/thymeleaf/menu/menuAdd.html
+++ b/src/main/resources/templates/thymeleaf/menu/menuAdd.html
@@ -28,7 +28,7 @@
         <!--<div class="col-xs-12">-->
         <form class="form-horizontal" id="menu" th:action="@{/menu}" method="post">
             <!--<input type="hidden" name="_method" th:value="put">-->
-            <!--<div class="form-group">-->
+            <!--<div class="form-jobgroup">-->
             <!--<label for="id" class="col-sm-2 control-label">ID</label>-->
             <!--<div class="col-sm-10">-->
             <!--<input name="id" class="form-control" id="id" placeholder="ID">-->
